Chapter 14 - Morse project

--- a/ch14/morse/morse.cabal
+++ b/ch14/morse/morse.cabal
@@ -25,13 +25,13 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
-  other-modules:
-      Paths_morse
+      Morse
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , containers
+    , QuickCheck
   default-language: Haskell2010
 
 executable morse-exe
@@ -40,21 +40,23 @@ executable morse-exe
       Paths_morse
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -fwarn-tabs
   build-depends:
       base >=4.7 && <5
     , morse
+    , containers
+    , QuickCheck
   default-language: Haskell2010
 
-test-suite morse-test
+test-suite tests
   type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  other-modules:
-      Paths_morse
+  main-is: tests.hs
   hs-source-dirs:
-      test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+      tests
+  ghc-options: -Wall -fno-warn-orphans
   build-depends:
       base >=4.7 && <5
     , morse
+    , containers
+    , QuickCheck
   default-language: Haskell2010
