--- a/ch14/morse/morse.cabal
+++ b/ch14/morse/morse.cabal
@@ -34,12 +34,10 @@ library
     , QuickCheck
   default-language: Haskell2010
 
-executable morse-exe
+executable morse
   main-is: Main.hs
-  other-modules:
-      Paths_morse
   hs-source-dirs:
-      app
+      src
   ghc-options: -Wall -fwarn-tabs
   build-depends:
       base >=4.7 && <5
@@ -52,7 +50,7 @@ test-suite tests
   type: exitcode-stdio-1.0
   main-is: tests.hs
   hs-source-dirs:
-      tests
+      test
   ghc-options: -Wall -fno-warn-orphans
   build-depends:
       base >=4.7 && <5
