Chapter 14 - Morse - Add QuickCheck tests

--- a/ch14/morse/morse.cabal
+++ b/ch14/morse/morse.cabal
@@ -50,7 +50,7 @@ test-suite tests
   type: exitcode-stdio-1.0
   main-is: tests.hs
   hs-source-dirs:
-      test
+      tests
   ghc-options: -Wall -fno-warn-orphans
   build-depends:
       base >=4.7 && <5
